2008-01-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ArrayType.cs:
		Add a constructor with the array rank. Fix #351924.
		Based on a patch by Rolf Kvinge <rkvinge@novell.com>.

2008-01-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Allow ldarg/ldloc/stloc to take a integer
		instead of the actual parameter or variable. Fix #350606.

2008-01-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultImporter.cs:
	  Mono.Cecil/ReflectionHelper.cs:
		Properly import nested types. Fix #351133.

2008-01-03  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Properly emit null type constants. Fix #351141.
		Patch by Rolf Kvinge <rkvinge@novell.com>.

2007-12-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Check for null arguments. Fix #350857.

2007-12-21  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Don't crash on force resolve for nested arrays
		in custom attributes.

2007-12-17  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/IMemberDefinition.cs: make IMemberDefinition
	implement ICustomAttributeProvider.

2007-12-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/AggressiveReflectionReader.cs: protect
	against zeroed tokens.

2007-12-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs: fix crash when reading
	some non .net binaries.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/SecurityDeclarationReader.cs:	Change default read
	value to true. Fix reading 2.0 security	declaration format used by
	MS compilers (#343553).

2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Fixed Optimize for ldc_i4

2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Cil/DocumentLanguage.cs
	  Mono.Cecil.Cil/DocumentLanguageVendor.cs: