@@ -1,5 +1,11 @@
 2008-01-07  Jb Evain  <jbevain@novell.com>
 
+	* Mono.Cecil.Cil/CilWorker.cs:
+		Allow ldarg.s/ldloc.s/stloc.s to take a byte
+		instead of the actual parameter or variable. Fix #350606.
+
+2008-01-07  Jb Evain  <jbevain@novell.com>
+
 	* Mono.Cecil/ArrayType.cs:
 		Add a constructor with the array rank. Fix #351924.
 		Based on a patch by Rolf Kvinge <rkvinge@novell.com>.
